feat: added search by email
