# docs/swagger.json
@@ -67,8 +67,14 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Melihat semua akun yang sudah terdaftar (Pagination)",
+                "summary": "Melihat semua akun yang sudah terdaftar (Pagination + Search)",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cari email",
+                        "name": "search",
+                        "in": "query"
+                    },
                     {
                         "type": "integer",
                         "description": "Nomor halaman (default 1)",
